[package]
name = "yew-network-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
yew = { version = "0.19.0" }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["console", "CanvasRenderingContext2d", "HtmlCanvasElement", "TextMetrics", "OffscreenCanvas"] }
js-sys = "0.3.61"
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
gloo-console = "0.1.0"